[gd_scene load_steps=24 format=3 uid="uid://3s2s3mtnmqp"]

[ext_resource type="Script" path="res://Scripts/Galinha.gd" id="1_wy4ea"]
[ext_resource type="Texture2D" uid="uid://h6r30ssuvmyj" path="res://Assets/Images/fusca-Sheet.png" id="2_85w1e"]
[ext_resource type="Texture2D" uid="uid://dtvgg2me15f1n" path="res://Assets/Images/chicken-poster-Sheet.png" id="2_tgblj"]
[ext_resource type="Texture2D" uid="uid://d0our7ifxubal" path="res://Assets/Images/chicken-poster-Sheet _inverted.png" id="4_3b7sp"]
[ext_resource type="Texture2D" uid="uid://cqshcxkehg1k" path="res://Assets/Images/leek.png" id="5_uf6p3"]

[sub_resource type="Animation" id="Animation_yaqtp"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath(".:mayTheChickenRoll")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.807843, 0.807843, 0.807843, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("statusContainer/ProgressBar:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.615686, 0.796078, 0.478431, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:stamina")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [80.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:mayTheChickenRun")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2kxw2"]
resource_name = "rolamento"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -6.28319, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 16]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath(".:mayTheChickenRoll")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Sprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(10.1286, 1),
"update": 0,
"values": [Color(1, 0.572549, 0.509804, 1), Color(0.807843, 0.807843, 0.807843, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("statusContainer/ProgressBar:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.792157, 0.321569, 0.290196, 1), Color(0.615686, 0.796078, 0.478431, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:stamina")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 80.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:mayTheChickenRun")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_817oe"]
_data = {
"RESET": SubResource("Animation_yaqtp"),
"rolamento": SubResource("Animation_2kxw2")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_soqwn"]
atlas = ExtResource("2_85w1e")
region = Rect2(0, 0, 577, 433)

[sub_resource type="AtlasTexture" id="AtlasTexture_phu5k"]
atlas = ExtResource("2_85w1e")
region = Rect2(577, 0, 577, 433)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dg30"]
atlas = ExtResource("2_tgblj")
region = Rect2(0, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahwe8"]
atlas = ExtResource("2_tgblj")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_utogn"]
atlas = ExtResource("4_3b7sp")
region = Rect2(480, 0, 480, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_d52ae"]
atlas = ExtResource("4_3b7sp")
region = Rect2(0, 0, 480, 480)

[sub_resource type="SpriteFrames" id="SpriteFrames_g5qmc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_soqwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phu5k")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dg30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahwe8")
}],
"loop": true,
"name": &"default_dir",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utogn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d52ae")
}],
"loop": true,
"name": &"default_esq",
"speed": 15.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_i7iyj"]
size = Vector3(0.690063, 1.1, 0.1)

[sub_resource type="Animation" id="Animation_s42xy"]
resource_name = "attack"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.5708, 2.87979, 0), Vector3(1.5708, 4.97419, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("armaArea/armaCollision:disabled")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(97.006, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fspf2"]
_data = {
"attack": SubResource("Animation_s42xy")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_1d7vq"]
size = Vector3(0.2, 1.2, 0.133142)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jlalc"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqyji"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_v8tod"]
font_size = 8
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r8cy2"]
font_size = 8
font_color = Color(1, 0, 0, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00665867, 0)
collision_layer = 16
collision_mask = 73
script = ExtResource("1_wy4ea")
mayTheChickenRoll = true
mayTheChickenRun = true
stamina = 80.0

[node name="animacao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_817oe")
}

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
modulate = Color(0.807843, 0.807843, 0.807843, 1)
alpha_cut = 1
sprite_frames = SubResource("SpriteFrames_g5qmc")
animation = &"default_dir"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0110474, 0, 0)
shape = SubResource("BoxShape3D_i7iyj")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.873228, 0.487311, 0, -0.487311, 0.873228, 0, 0, -1)

[node name="saidaDeBalas" type="Node3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.985307, 0.170794, 0, -0.170794, 0.985307, 0, 2.5, 25)
fov = 55.2839

[node name="arma" type="RigidBody3D" parent="."]
transform = Transform3D(-0.965925, 0.258822, -9.36934e-07, 0, -3.61999e-06, -1, -0.258822, -0.965925, 3.49664e-06, 0, 0, 0)
collision_mask = 4
axis_lock_linear_y = true
axis_lock_angular_y = true
gravity_scale = 0.0

[node name="animacao" type="AnimationPlayer" parent="arma"]
libraries = {
"": SubResource("AnimationLibrary_fspf2")
}

[node name="leek" type="Sprite3D" parent="arma"]
transform = Transform3D(0.707107, -0.707107, -6.59439e-15, 0.707107, 0.707107, -1.09906e-14, 1.24345e-14, 3.10862e-15, 1, -0.5, 0.5, 0)
offset = Vector2(-28.235, 0)
pixel_size = 0.002
alpha_cut = 2
texture = ExtResource("5_uf6p3")

[node name="armaArea" type="Area3D" parent="arma"]
transform = Transform3D(0.707107, -0.707107, -7.99361e-15, 0.707107, 0.707107, -1.08802e-14, 8.88178e-15, -1.77636e-15, 1, -0.5, 0.5, 0)
collision_layer = 32

[node name="armaCollision" type="CollisionShape3D" parent="arma/armaArea"]
transform = Transform3D(1, 2.98023e-08, 4.77485e-12, -2.98023e-08, 1, 1.61435e-11, 0, 3.41061e-13, 1, 0, 0, 0.00361937)
shape = SubResource("BoxShape3D_1d7vq")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="statusContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -5.0
offset_right = 28.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="statusContainer"]
modulate = Color(0.615686, 0.796078, 0.478431, 1)
custom_minimum_size = Vector2(54, 8)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxEmpty_jlalc")
theme_override_styles/fill = SubResource("StyleBoxFlat_wqyji")
value = 100.0
show_percentage = false

[node name="UnableToRun" type="Label" parent="statusContainer"]
visible = false
layout_mode = 2
text = "Unable to run"
label_settings = SubResource("LabelSettings_v8tod")

[node name="unableToRoll" type="Label" parent="statusContainer"]
visible = false
layout_mode = 2
text = "Unable to roll"
label_settings = SubResource("LabelSettings_r8cy2")
horizontal_alignment = 1
